app/assets/stylesheets/custom.css.scss
@import "bootstrap-sprockets";
@import "bootstrap";
@import 'https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900';



/*
blue: #2977F2;
*/



/*-------------------------  Generals   -------------------------*/

html, body {
	overflow-x: hidden;
	font-family: 'Lato', sans-serif;
	font-weight: 400;
}

ul {
	list-style-type: none;
}

h2 {
	font-size: 4em;
	font-family: 'Lato', sans-serif;
	font-weight: 700;
	font-variant: small-caps;
}

img {
	width: 100%;
}

h3 {
	font-size: 2.2em;
	letter-spacing: 2px;
	font-family: 'Lato', sans-serif;
	font-weight: 400;
	font-variant: small-caps;
}

h4 {
	font-family: 'Lato', sans-serif;
	font-weight: 700;
	font-variant: small-caps;
	font-size: 1.6em;
}

p.lead {
	font-size: 1.3em;
	font-family: 'Lato', sans-serif;
	font-weight: 400;
}

p small {
	font-size: 1.2em;
	color: rgba(0, 0, 0, 0.7);
}

a {
	color: #000;
}

a:hover {
	text-decoration: none;
	color: #000;
}

hr {
	height: 5px;
	border-width: 0;
	background-color: #000;
	width: 15%;
}

/*-------------------------  Helpers   -------------------------*/

@media (min-width: 767px) {
  .pull-right-sm {
    float: right;
  }
  .pull-left-sm {
    float: left;
  }
}

.marginBottom50 {
	margin-bottom: 50px;
}

.marginBottom100 {
	margin-bottom: 100px;
}

.marginTopBottom100 {
	margin-top: 100px;
	margin-bottom: 100px;
}

.marginTop20 {
	margin-top: 20px;
}

.marginTop50 {
	margin-top: 50px;
}

.marginTop100 {
	margin-top: 100px;
}

.marginTop200 {
	margin-top: 200px;
}

.big {
	font-size: 1.7em;
}

.thin {
	font-family: 'Lato', sans-serif;
	font-weight: 100;
	font-variant: small-caps;
}

.light {
	font-family: 'Lato', sans-serif;
	font-weight: 300;
	font-variant: small-caps;
}

.regular {
	font-family: 'Lato', sans-serif;
	font-weight: 400;
	font-variant: small-caps;
}

.medium {
	font-family: 'Lato', sans-serif;
	font-weight: 700;
	font-variant: small-caps;
}

.bold {
	font-family: 'Lato', sans-serif;
	font-weight: 900;
	font-variant: small-caps;
}

.huge {
	font-size: 3.5em;
}

.quote {
	font-size: 1.6em;
	font-style: italic;
	font-weight: 600;
}

.link-with-border {
	position: relative;
	width: 200px;
	background-color: #fff;
	font-weight: 700;
	padding: 3px 60px 7px 30px;
	border: 3px solid #000;
	border-radius: 40px;
	font-family: 'Lato', sans-serif;
	font-weight: 700;
	font-variant: small-caps;
	font-size: 1.4em;
}

.plus-icon, .plus-icon-blue, .plus-circle-icon, .angle-right-icon {
	font-size: 1.7em;
	font-family: 'Lato', sans-serif;
	font-weight: 400;
	position: absolute;
	right: 10%;
	top: -6.5px;
}

.plus-icon-blue {
	color: #2977F2;
}

.angle-right-icon {
	font-weight: 400;
}

.plus-circle-icon {
	border: 1px solid rgba(0, 0, 0, 0);
	height: 23px;
	width: 23px;
	color: #fff;
	background-color: rgba(0, 0, 0, 0.7);
	border-radius: 100%;
	top: 17%;
	.plus-adjust {
		position: relative;
		top: -13px;
		left: 0.3px;
	}
}

.link-no-border {
	width: 200px;
	background-color: #fff;
	padding: 3px 60px 7px 30px;
	border: 3px solid rgba(0,0,0,0);
	border-radius: 40px;
	font-family: 'Lato', sans-serif;
	font-weight: 700;
	font-variant: small-caps;
	font-size: 1.3em;
}

.link-with-border:hover, .link-no-border:hover {
	background-color: #2977F2;
	color: #fff;
	border: 3px solid #000;
	.plus-icon-blue {
		color: #fff;
	}
	.plus-circle-icon {
		border: 1px solid #fff;
		height: 23px;
		width: 23px;
		color: #2977F2;
		background-color: #fff;
		border-radius: 100%;
	}
}

.hvr-shutter-out-horizontal:hover, .hvr-sweep-to-right:hover {
	background-color: #fff;
}

.hvr-shutter-in-horizontal:hover{
	background-color: #2977F2;
}

.anim {
	position: relative;
}

.shadow-animation {
	position: relative;
}

.check-image {
	width: 20px;
}

.high-line {
	line-height: 50px;
}

.blue {
	color: #2977F2;
}

.heavy {
	font-family: 'Lato', sans-serif;
	font-weight: 900;
	font-size: 1.2em;
}

.hide-in-desktop, .hide-in-sm-desktop {
	display: none;
}

.check-anchor-div {
	position: relative;
	width: 30px;
	top: 20px;
}

.col-xs-10 {
	margin-left: 15px;
}

.mini-overlay, .mini-overlay-prod, .mini-overlay-career-job {
	position: absolute;
	top: 0;
	right: 0;
	height: 100%;
	width: 100%;
	background-color: #fff;
}

.mini-overlay-black {
	background-color: #000;
}

.mini-overlay-grey {
	background-color: #f7f7f7;
}

.show-on-hover, .show-on-scroll, .show-on-submit, .close-subscribe, .only-in-375 {
	display: none;
}

.tab-content .tab-pane {    
    position: relative;
    left: 0;
}

/*-------------------------  Shared Carousel   -------------------------*/

.carousel-anchor {
	position: relative;
	margin-bottom: 100px;
	.clients-logo-img {
		max-width: 150px;
	}
	.carousel-arrow {
		position: absolute;
		cursor: pointer;
		bottom: 50px;
		width: 40px;
		opacity: 0.6;
	}
	.carousel-left-arrow {
		left: -100px;
	}
	.carousel-right-arrow {
		right: -100px;
	}
	@media only screen and (max-width: 1200px) {
		.carousel-arrow {
			width: 50px;
		}
	}
	@media only screen and (max-width: 991px) {
		.carousel-arrow {
			bottom: 70px;
			width: 40px;
		}
		.carousel-left-arrow {
			left: -60px;
		}
		.carousel-right-arrow {
			right: -60px;
		}
	}
	@media only screen and (max-width: 900px) {
		.carousel-arrow {
			display: none;
		}
		.clients-logo-img {
			width: 50px;
		}
	}
}

.carousel-hr {
	width: 200px;
}
/* ... */

